style.css
/* ... */
.header-right-contents {
  display: flex;
  flex-direction: column;
  position: relative;
  top: 45%;
  width: 100%;
  grid-column: 1/3;
  font-size: 1.4rem;
  padding: 10px;
}

.header-left-contents h2 {
  font-size: 4.6rem;
}

.header-right-contents h2 {
  font-size: 3rem;
}

.header-left-contents ul,
.header-left-contents li,
.header-right-contents ul,
.header-right-contents li {
  display: flex;
  padding: 0 8px 0 0;
  color: grey;
}

/* media queries goes here */

@media screen and (max-width: 768px) {
  .navigation {
    width: 100%;
  }

  .navigation li {
    display: none;
  }

  .main-header {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 10px;
    width: 100%;
  }

  .logo img {
    display: none;
  }

  .header-left {
    height: 18rem;
    display: block;
  }

  .header-right {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 10px;
    height: 100%;
  }

  .header-right div {
    height: 18rem;
    display: block;
  }

  .header-left-contents {
    width: 100%;
    height: 100%;
  }

  .top-nav {
    display: none;
  }

  .mobile-nav {
    display: block;
    position: fixed;
    height: 5rem;
    background: white;
    width: 100%;
    z-index: 1000;
  }

  .mobile-nav ul {
    float: right;
    list-style: none;
  }

  .mobile-nav img {
    width: 10rem;
    position: absolute;
    left: 0;
    height: 5rem;
  }

  .fa-search {
    position: relative;
    top: 0;
  }

  .fa-bars {
    padding: 18px;
    border: 0.5px solid rgba(48, 48, 48, 0.085);
    top: 25px;
    color: var(--red);
  }

  .fest-ad {
    display: none;
  }

  main {
    padding-top: 5.1rem;
  }

  .header-date {
    display: none;
  }

  div.deals-card {
    display: flex;
  }

  div.bg {
    padding-top: 7.5rem;
    width: 75px;
    height: 0;
    margin-right: 2rem;
  }

  div.deals-card--tag {
    display: none;
  }

  div.deals-card-text a {
    font-size: 1.3rem;
  }

  div.deals-card-text {
    padding: 0;
  }

  /*
  mediaquery for footer */

  .footer-nav-container {
    width: 100%;
  }

  div.deals-cards {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: 0;
  }

  div.app {
    grid-template-columns: 1fr;
    width: 100%;
  }
}

.title-container a {
  color: white;
  font-weight: bolder;
  text-decoration: none;
  font-size: 1.6rem;
}

.title-container span {
  font-size: 1rem;
  color: lightgray;
  position: relative;
  top: 2rem;
}

/* media query for tablets */

@media screen and (min-width: 768px) and (max-width: 1024px) {
  div.deals-cards {
    grid-template-columns: repeat(3, 1fr);
    width: 96%;
    margin: 4rem 0;
  }

  div.app {
    grid-template-columns: repeat(2, 1fr);
  }
}

/* table media query ends here */
.footer {
  font-size: 1.6rem;
  background-color: var(--dark-grey);
  width: 100%;
}

.footer-copyright {
  color: #aaa;
  font-size: 1.1rem;
  margin: auto;
  padding: 4rem;
  text-align: center;
  background: black;
}

.love {
  color: red;
  font-size: 1.6rem;
}

.footer-copy {
  text-transform: uppercase;
  color: white;
  font-weight: bolder;
  font-family: sans-serif;
  cursor: pointer;
}

/* styling the deals section */

.deals {
  font-size: 1.6rem;
  width: 100%;
}

.deals-cards {
  max-width: 124rem;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 20px;
  margin: 2rem auto;
  grid-template-rows: repeat(2, minmax(25rem, auto));
}

.deals-list {
  max-width: 124rem;
  margin: 4rem auto;
  list-style: none;
  display: flex;
  justify-content: space-between;
}

.red-link.big {
  font-size: 2.3rem;
  font-weight: bolder;
  grid-template-columns: 1fr;
  letter-spacing: -0.015em;
}

.red-link.small {
  font-size: 1.4rem;
  letter-spacing: -0.123px;
}

.bg {
  height: 70%;
  background-color: #000;
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  display: block;
  overflow: hidden;
  padding-top: 50%;
  width: 100%;
  margin-bottom: 8px;
  position: relative;
}

.story-image {
  background-color: #000;
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;
  display: block;
  height: 0;
  overflow: hidden;
  padding-top: 50%;
  width: 100%;
  margin-bottom: 8px;
  position: relative;
}

.bg1 {
  background-image: url('https://cdnp2.stackassets.com/951117fa37bba0fe8c35739ab4459a0c01b9590f/store/2e4b58df51e1a58ef7a4e81238bf44883552cc806bdcd1a077740a375ec1/sale_25677_primary_image.jpg');
}

.bg2 {
  background-image: url('https://cdnp1.stackassets.com/cba31166b47b2c151d94a8397c4aa0604771f268/store/04b44dd5593f2a7c175e4dd48292fe76d560b9c1c0536d03345aa8c50141/sale_18367_primary_image.jpg');
}

.bg3 {
  background-image: url('https://cdnp0.stackassets.com/a875072fa31f35279ce85438b376249c54eca996/store/8534f1826bec31d741297d74ee8a30edc0f492f8f74cd08aa4ed0103d42a/sale_14523_primary_image.jpg');
}

.bg4 {
  background-image: url('https://cdnp0.stackassets.com/3d28a01310d47a9ece38eb1a189790944b8e512e/store/bd912e50369c037674603acf0ef1a582b658ef72662651d6eab3d7aa657e/sale_25558_primary_image.jpg');
}

.bg5 {
  background-image: url('https://cdnp3.stackassets.com/e349ad77dedb09e663dd8ec86a4759713e72d606/store/c89e42f0e55479d65b6c97b7a476cc30d03feb46f2ea8e3320dca7019111/sale_24696_primary_image.jpg');
}

.bg6 {
  background-image: url('https://cdnp3.stackassets.com/0b442829152188ef5c1de0aff7d72820282f26e0/store/73b9b30bec03d67a0c89bae3aaaddafc5a59895b1edd5194d61ab010f926/sale_20564_primary_image.jpg');
}

.bg7 {
  background-image: url('https://cdnp1.stackassets.com/3c7255c565df64669fabc969bfd7cbaa1b2178c4/store/36c7d535db46e3b794b7b76c698d5ccfc005e8b164028011bc6b85496690/sale_25675_primary_image.jpg');
}

.bg8 {
  background-image: url('https://cdnp2.stackassets.com/7a52fa1ea563b69972a625495a4d799f0da1196b/store/44902fe2b6d0ff858be14781320f89c96e10d0b57c4015dea1aafcea7553/sale_25322_primary_image.jpg');
}

.latest-news {
  width: 100%;
  align-content: center;
}
/* ... */

